2011-02-28  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (macro): Handle M_PREF_AB.

2011-02-28  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (RELAX_BRANCH_ENCODE): Encode the temporary
	register to use.
	(RELAX_BRANCH_UNCOND): Adjust accordingly.
	(RELAX_BRANCH_LIKELY): Likewise.
	(RELAX_BRANCH_LINK): Likewise.
	(RELAX_BRANCH_TOOFAR): Likewise.
	(RELAX_BRANCH_AT): New macro.
	(append_insn): Encode the temporary register to use in standard
	MIPS branch relaxation.
	(relaxed_branch_length): Update according to changes to
	RELAX_BRANCH_ENCODE.
	(md_convert_frag): Use the encoded register as the temporary.

2011-02-28  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (mips_fix_adjustable): On REL targets also
	reject PC-relative relocations.

2011-02-28  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (md_convert_frag): Correct message
	capitalization.

2011-02-28  Alan Modra  <amodra@gmail.com>

	* symbols.c (report_op_error): Remove unnecessary forward declaration.
	Add "op" parameter.  Report operator and operand segments in error
	message, not operand symbols.
	(resolve_symbol_value): Always set segment for equated symbols, not
	just when finalizing.  Adjust report_op_error calls.

2011-02-25  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (reloc): Don't sign-check 4-byte relocations
	if 64bit relocations aren't allowed.

2011-02-25  Alan Modra  <amodra@gmail.com>

	PR gas/12519
	* config/obj-elf.c (elf_frob_symbol): Properly handle size expression.

2011-02-21  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (mips_ip) <'o'>: Remove duplicate
	initialization of offset_reloc.

2011-02-15  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (dot_cfi_dummy): New.
	(cfi_pseudo_table) [!TARGET_USE_CFIPOP]: New.
	* read.c (pobegin): Unconditionally call cfi_pop_insert.

2011-02-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.
