@@ -1,5 +1,10 @@
 2011-02-28  Maciej W. Rozycki  <macro@codesourcery.com>
 
+	* config/tc-mips.c (append_insn): Disable branch relaxation for
+	DSP instructions.
+
+2011-02-28  Maciej W. Rozycki  <macro@codesourcery.com>
+
 	* config/tc-mips.c (macro): Handle M_PREF_AB.
 
 2011-02-28  Maciej W. Rozycki  <macro@codesourcery.com>
